test/libyul/yulSyntaxTests/switch_invalid_expr_2.yul
{
    switch mload
    case 1 {}
    default {}
}
// ----
// ParserError 7104: (23-27): Builtin function "mload" must be called.
